--- a/src/App.css
+++ b/src/App.css
@@ -717,6 +717,10 @@ select {
 }
 
 /* Admin Login */
+.profile-pic img {
+  width: 250px;
+  height: 250px;
+}
 .AdminLogin {
   height: 100vh;
   display: flex;
