--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
 /* Nav */
 .Nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 25px;
 }
 
@@ -28,17 +28,15 @@ body {
   color: #36363a;
 }
 
-.nav-links .register-btn {
-  background-color: #a6a670;
-  padding: 10px 25px;
-  color: white;
-  border-radius: 5px;
-  border: none;
+.nav-links div {
+  cursor: pointer;
 }
-
+.HomePage h3 {
+  text-align: center;
+}
 /* ShowCase */
 .ShowCase {
-  height: 500px;
+  height: 450px;
   display: flex;
   flex-direction: column;
 
@@ -46,13 +44,20 @@ body {
 }
 
 .showcase-img {
+  height: inherit;
   flex: 90%;
   width: 100%;
+
   background-color: #e0e0e0;
 
   position: relative;
 }
-
+.showcase-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+}
 .showcase-bottom {
   flex: 10%;
   background-color: #adadad;
@@ -65,6 +70,8 @@ body {
   transform: translate(-50%, 0%);
   width: 70%;
   font-size: 2.5rem;
+  color: white;
+  text-align: center;
 }
 
 .SearchAccomodations {
@@ -114,11 +121,20 @@ body {
 .Card .img {
   height: 300px;
   width: 300px;
-  background-color: #bbb;
+}
+.Card img {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.Card .title {
+  color: #36363a;
+  font-weight: 500;
 }
 
 .heading {
-  margin-left: 10%;
+  text-align: center;
 }
 
 /** RESULTS PAGE **/
@@ -293,10 +309,12 @@ body {
   justify-content: end;
   align-items: center;
   gap: 5px;
-
+  padding: 25px;
   box-shadow: 1px 0px 5px #bbb;
 }
-
+.profile {
+  cursor: pointer;
+}
 .Sidebar {
   flex: 2;
   width: 30%;
@@ -310,7 +328,6 @@ body {
 }
 
 .logo {
-  flex: 10%;
   font-size: 1.4rem;
   font-weight: bold;
   color: #a6a670;
@@ -583,10 +600,12 @@ body {
 }
 .AccCard .img {
   flex: 30%;
+  height: 200px;
   background-color: #bbb;
 }
 .AccCard img {
   width: 100%;
+  height: 100%;
 }
 
 .acc-card-info {
@@ -802,7 +821,9 @@ select {
   object-fit: cover;
   object-position: center;
 }
-
+.AdminProfile {
+  text-align: center;
+}
 /* Registration */
 .UserRegistration {
   height: 100vh;
